observability/argo-rollouts-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-metrics
  namespace: argo-rollouts
  labels:
    app.kubernetes.io/name: argo-rollouts
spec:
  selector:
    app.kubernetes.io/name: argo-rollouts
    app.kubernetes.io/instance: argo-rollouts
  ports:
    - name: metrics
      port: 8090
      targetPort: 8090
